--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "clsx": "^2.1.1",
     "isomorphic-dompurify": "^2.33.0",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "sanitize-html": "^2.17.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
